# carbon-farming

./: README.md  _config.yml  index.md  pyproject.toml
_includes/: diagram.html
_layouts/: default.html
notes/: agriculture-act-future-support.md  agroforestry.md  bsi-nature-investment-standards.md  eu-crcf.md  farm-carbon-auditing.md  ghg-protocol.md  gis-remote-sensing.md  gold-standard.md  icvcm-ccps.md  insetting.md  iso-14064.md  issb-uk-srs.md  lca.md  mrv.md  natural-capital.md  peatland-code.md  sbti-flag.md  scope-3.md  scotland-ccp.md  soil-science.md  tnfd.md  uk-ets-ggr.md  uk-land-carbon-registry.md  verra-vm0042.md  woodland-carbon-code.md
src/carbon_farming/livestock/: constants.py  enteric_fermentation.py  models.py  net_energy.py
tests/livestock/: test_constants.py  test_enteric_fermentation.py  test_models.py  test_net_energy.py
