[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carbon-farming"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0,<3"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/carbon_farming"]

[tool.pytest.ini_options]
testpaths = ["tests"]
